--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,10 @@
             <nav>
                 <ul class="navigation-list">
                     <li class="navigation-item">
-                        <a class="pages current-page" href="./index.html">Studio</a>
+                        <a class="pages" href="./index.html">Studio</a>
                     </li>
                     <li class="navigation-item">
-                        <a class="pages" href="./portfolio.html">Portfolio</a>
+                        <a class="pages current-page" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li class="navigation-item">
                         <a class="pages" href="#">Contacts</a>
