--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         <label for="name">Name
         <input id="name" name="name" type="text" />
         </label>
-        <svg class="input-icon" width="11px" height="11px">
+        <svg class="input-icon" width="18px" height="18px">
             <use href="./images/sprite.svg#icon-person"></use></svg>
     </div>
     <div class="data-input">
@@ -373,7 +373,7 @@
         
             <input type="tel" name="phone_number" />
         </label>
-        <svg class="input-icon" width="11px" height="11px">
+        <svg class="input-icon" width="18px" height="18px">
             <use href="./images/sprite.svg#icon-phone-old"></use>
         </svg>
     </div>
@@ -383,21 +383,21 @@
            
             <input type="email" name="email" />
         </label>
-        <svg class="input-icon" width="11px" height="11px">
-            <use href="./images/sprite.svg#icon-envelope"></use>
+        <svg class="input-icon" width="18px" height="18px">
+            <use href="./images/sprite.svg#icon-envelope-2"></use>
         </svg>
     </div>
     <div class="data-input">
         <label for="comments">
             Comments
    
-            <textarea name="comments" rows="5" placeholder="Enter the text"></textarea>
+            <textarea name="comments" rows="7" placeholder="Enter the text"></textarea>
         </label>
     </div>
     <div class="input">
 
         <label class="checkbox">
-            <input type="checkbox" name="#" value="#" checked />
+            <input type="checkbox" name="#" value="#" />
             I agree with the newsletter and accept the Terms and Conditions
         </label>
         </div>
