--- a/portfolio.html
+++ b/portfolio.html
@@ -221,56 +221,68 @@
             </div>
         </section>
     </main>
-    <footer class="footer-section">
-        <div class="footer-container">
-            <div class="footer-container-left"><a class="footer-logo" href="./index.html">WebStudio</a>
-    
-                <address class="footer-addres">
-                    <a class="footer-addres-addres" href="https://goo.gl/maps/dAtSncTWALTyisYv6">695 Park Ave, New York, NY
-                        10065,<br> United States</a>
-                    <ul>
-                        <li class="footer-contacts-item"><a class="footer-contacts"
-                                href="mailto:info@example.com">info@example.com</a></li>
-                        <li class="footer-contacts-item"><a class="footer-contacts" href="tel:12127724150">+12127724150</a>
-                        </li>
-                    </ul>
-                </address>
-            </div>
-            <div class="footer-container-middle">
-                <h4 class="media-title">FIND US ON</h4>
-                <ul class="footer-social-media-list">
-                    <li class="footer-social-media-item">
-                        <a class="footer-social-media-link" href="#"><svg class="footer-social-media-icon" width="20px"
-                                height="20px">
-                                <use href="./images/sprite.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-media-item">
-                        <a class="footer-social-media-link" href="#"><svg class="footer-social-media-icon" width="20px"
-                                height="20px">
-                                <use href="./images/sprite.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-media-item">
-                        <a class="footer-social-media-link" href="#"><svg class="footer-social-media-icon" width="20px"
-                                height="20px">
-                                <use href="./images/sprite.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-media-item">
-                        <a class="footer-social-media-link" href="#"><svg class="footer-social-media-icon" width="20px"
-                                height="20px">
-                                <use href="./images/sprite.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
+<footer class="footer-section">
+    <div class="footer-container">
+        <div class="footer-container-left"><a class="footer-logo" href="./index.html">WebStudio</a>
+
+            <address class="footer-addres">
+                <a class="footer-addres-addres" href="https://goo.gl/maps/dAtSncTWALTyisYv6">695 Park Ave, New York, NY
+                    10065,<br> United States</a>
+                <ul>
+                    <li class="footer-contacts-item"><a class="footer-contacts"
+                            href="mailto:info@example.com">info@example.com</a></li>
+                    <li class="footer-contacts-item"><a class="footer-contacts" href="tel:12127724150">+12127724150</a>
                     </li>
                 </ul>
-            </div>
+            </address>
         </div>
-    </footer>
+        <div class="footer-container-middle">
+            <h4 class="media-title">FIND US ON</h4>
+            <ul class="footer-social-media-list">
+                <li class="footer-social-media-item">
+                    <a class="footer-social-media-link" href="#"><svg class="footer-social-media-icon" width="20px"
+                            height="20px">
+                            <use href="./images/sprite.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-media-item">
+                    <a class="footer-social-media-link" href="#"><svg class="footer-social-media-icon" width="20px"
+                            height="20px">
+                            <use href="./images/sprite.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-media-item">
+                    <a class="footer-social-media-link" href="#"><svg class="footer-social-media-icon" width="20px"
+                            height="20px">
+                            <use href="./images/sprite.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-media-item">
+                    <a class="footer-social-media-link" href="#"><svg class="footer-social-media-icon" width="20px"
+                            height="20px">
+                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-container-right">
+            <h4 class="subscription-text">SUBSCRIBE TO THE NEWSLETTER</h4>
+            <form action="#" class="my-footer-form">
+                <label for="email"></label>
+                <input class="my-email-subscription" id="email" type="email" name="email" placeholder="E-mail" />
+                <button class="my-subscribe" type="submit">Subscribe <span><svg class="footer-social-media-icon"
+                            width="24px" height="24px">
+                            <use href="./images/sprite.svg#icon-icon-send"></use>
+                        </svg></span></button>
+            </form>
+
+        </div>
+    </div>
+</footer>
     </body>
     
     </html>
