--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
         <label class="checkbox-label" for="checkbox-policy">
             <span class="modal-checkbox">
                 <svg class="modal-checkmark" width="11px" height="8px">
-                    <use href="./images/sprite.svg#icon-checkmark"></use>
+                    <use href="./images/sprite.svg#icon-check-mark"></use>
                 </svg>
             </span> 
             <span>
