--- a/index.html
+++ b/index.html
@@ -342,10 +342,10 @@
 </div>
 <div class="footer-container-right">
     <h4 class="subscription-text">SUBSCRIBE TO THE NEWSLETTER</h4>
-    <form action="#" class="my-footer-form">
+    <form action="#" class="footer-form">
     <label for="email"></label>
-        <input class="my-email-subscription" id="email" type="email" name="email" placeholder="E-mail"/>
-    <button class="my-subscribe" type="submit">Subscribe <span><svg class="footer-social-media-icon subscribe-icon" width="24px"
+        <input class="email-subscription" id="email" type="email" name="email" placeholder="E-mail"/>
+    <button class="subscribe" type="submit">Subscribe <span><svg class="footer-social-media-icon subscribe-icon" width="24px"
                 height="24px">
                 <use href="./images/sprite.svg#icon-icon-send"></use>
             </svg></span></button>
@@ -396,7 +396,7 @@
 <input class="checkbox" type="checkbox" name="terms" value="agree" required id="checkbox-policy">
         <label class="checkbox-label" for="checkbox-policy">
             <span class="modal-checkbox">
-                <svg class="modal-checkmark" width="11px" height="8px">
+                <svg class="modal-checkmark" width="18px" height="18px">
                     <use href="./images/sprite.svg#icon-check-mark"></use>
                 </svg>
             </span> 
