--- a/portfolio.html
+++ b/portfolio.html
@@ -271,10 +271,10 @@
         </div>
         <div class="footer-container-right">
             <h4 class="subscription-text">SUBSCRIBE TO THE NEWSLETTER</h4>
-            <form action="#" class="my-footer-form">
+            <form action="#" class="footer-form">
                 <label for="email"></label>
-                <input class="my-email-subscription" id="email" type="email" name="email" placeholder="E-mail" />
-                <button class="my-subscribe" type="submit">Subscribe <span><svg class="footer-social-media-icon"
+                <input class="email-subscription" id="email" type="email" name="email" placeholder="E-mail" />
+                <button class="subscribe" type="submit">Subscribe <span><svg class="footer-social-media-icon"
                             width="24px" height="24px">
                             <use href="./images/sprite.svg#icon-icon-send"></use>
                         </svg></span></button>
